@@ -1,4 +1,4 @@
-.\"	$NetBSD: make.1,v 1.187 2011/04/11 01:44:15 sjg Exp $
+.\"	$NetBSD: make.1,v 1.188 2011/04/11 06:56:50 wiz Exp $
 .\"
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -786,7 +786,7 @@ Normally
 will not create .meta files in
 .Ql Va .CURDIR .
 This can be overridden by setting
-.Va bf 
+.Va bf
 to a value which represents True.
 .It Pa verbose
 If in "meta" mode, print a clue about the target being built.
@@ -1043,16 +1043,16 @@ safely through recursive invocations of
 .It Cm \&:R
 Replaces each word in the variable with everything but its suffix.
 .It Cm \&:gmtime
-The value is a format string for 
+The value is a format string for
 .Xr strftime 3 ,
-using the current 
+using the current
 .Xr gmtime 3 .
 .It Cm \&:hash
 Compute a 32bit hash of the value and encode it as hex digits.
 .It Cm \&:localtime
-The value is a format string for 
+The value is a format string for
 .Xr strftime 3 ,
-using the current 
+using the current
 .Xr localtime 3 .
 .It Cm \&:tA
 Attempt to convert variable to an absolute path using
