@@ -1,4 +1,4 @@
-/*	$NetBSD: var.c,v 1.164 2011/04/11 01:44:15 sjg Exp $	*/
+/*	$NetBSD: var.c,v 1.165 2011/04/11 14:49:09 sjg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: var.c,v 1.164 2011/04/11 01:44:15 sjg Exp $";
+static char rcsid[] = "$NetBSD: var.c,v 1.165 2011/04/11 14:49:09 sjg Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)var.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: var.c,v 1.164 2011/04/11 01:44:15 sjg Exp $");
+__RCSID("$NetBSD: var.c,v 1.165 2011/04/11 14:49:09 sjg Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -2922,7 +2922,7 @@ ApplyModifiers(char *nstr, const char *tstr,
 		cp = tstr + 6;
 		termc = *cp;
 	    } else {
-		goto bad_modifier;
+		goto default_case;
 	    }
 	    break;
 	case 'h':
@@ -2932,7 +2932,7 @@ ApplyModifiers(char *nstr, const char *tstr,
 		cp = tstr + 4;
 		termc = *cp;
 	    } else {
-		goto bad_modifier;
+		goto default_case;
 	    }
 	    break;
 	case 'l':
@@ -2942,7 +2942,7 @@ ApplyModifiers(char *nstr, const char *tstr,
 		cp = tstr + 9;
 		termc = *cp;
 	    } else {
-		goto bad_modifier;
+		goto default_case;
 	    }
 	    break;
 	case 't':
